--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+org.gradle.java.home=C:/Program Files/Java/jdk-17
+
 org.gradle.jvmargs=--illegal-access=permit \
 --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
 --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
