Copy over bundles and sprites

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,20 +1,100 @@
 # Blocks
 
+## Turret
+block.extra-sand-redux-harbinger.name = [#F3E979]Evisceration
+block.extra-sand-redux-harbinger.description = I CAST FRICK EVERYTHING IN THAT GENERAL DIRECTION.\nSandbox only.\n[red]Big lag warning.
+block.extra-sand-redux-harbinger.details = Go to r/Mindustry and search for "The true power of the Duo."
+block.extra-sand-redux-everything-gun.name = Chaos
+block.extra-sand-redux-everything-gun.description = Fires [red]ALL[] bullets in the game (vanilla or modded) at random - fires more powerful bullets over time.\nSandbox only.\n[darkgray]Hippity hoppity your ears are my property.\n(May or may not get quite laggy from all the chaos.)\n[red]May crash the game due to incompatibility with scripted bullets from other mods.
+block.extra-sand-redux-everything-gun.details = Ilya helped me with the increase damage over time code.
+
+## Distribution
+block.extra-sand-redux-everything-item-source.name = Omega Item Source
+block.extra-sand-redux-everything-item-source.description = Infinitely outputs all items at once. Sandbox only.
+
+## Liquid
+block.extra-sand-redux-everything-liquid-source.name = Omega Liquid Source
+block.extra-sand-redux-everything-liquid-source.description = Infinitely outputs all liquids at once. Sandbox only.
+
+## Power
+block.extra-sand-redux-rainbow-power-node.name = Rainbow Power Node
+block.extra-sand-redux-rainbow-power-node.description = Better than the average power node. Also is rainbowy.\nSandbox only.
+block.extra-sand-redux-rainbow-power-source.name = Rainbow Power Source
+block.extra-sand-redux-rainbow-power-source.description = Better than the average power source. Also is rainbowy.\nSandbox only.
+block.extra-sand-redux-rainbow-power-boost.name = Rainbow Power Boost Source
+block.extra-sand-redux-rainbow-power-boost.description = Like the rainbow power source, but everything in its power system gets boosted.\nSandbox only.
+
 ## Defence
+block.extra-sand-redux-sandbox-wall.name = Sandbox Wall
+block.extra-sand-redux-sandbox-wall.description = Protects structures from enemy projectiles. Numerous functionalities can be configured.\nSandbox only.
+block.extra-sand-redux-sandbox-wall-large.name = Large Sandbox Wall
+block.extra-sand-redux-sandbox-wall-large.description = Protects structures from enemy projectiles. Numerous functionalities can be configured.\nSandbox only.
 block.extra-sand-redux-target-dummy-base.name = Target Dummy
 block.extra-sand-redux-target-dummy-base.description = Spawns a target dummy to test dps. Armor and flight can be configured.\nSandbox only.
 
+## Heat
+block.extra-sand-redux-infini-heater.name = Configurable Heat Source
+block.extra-sand-redux-infini-heater.description = Infinitely produces heat.\nHeat output can be configured.\nSandbox only.
+
+## Unit
+block.extra-sand-redux-god-factory.name = Ultimate Unit Factory
+block.extra-sand-redux-god-factory.description = Spawns a unit with every other units weapons and abilities attached to it.\nSandbox only.
+block.extra-sand-redux-god-factory.details = godhood.exe
+block.extra-sand-redux-cap-block.name = Unit Cap Increaser
+block.extra-sand-redux-cap-block.description = Increases unit cap.\nSandbox only.
+
+## Other sources/voids
+block.extra-sand-redux-multi-source.name = Dual Source
+block.extra-sand-redux-multi-source.description = Infinitely outputs items and liquids.\nSandbox only.
+block.extra-sand-redux-multi-void.name = Dual Void
+block.extra-sand-redux-multi-void.description = Destroys any items and removes any liquids.\nSandbox only.
+block.extra-sand-redux-multi-source-void.name = Dual Souoid
+block.extra-sand-redux-multi-source-void.description = Infinitely outputs items and liquids [red]and[] destroys any items and removes any liquids.\nSandbox only.
+block.extra-sand-redux-multi-source-void.details = U N L I M I T E D   P O W E R
+block.extra-sand-redux-material-source-void.name = Omega Souoid
+block.extra-sand-redux-material-source-void.description = Infinitely outputs all items and liquids at once [red]and[] destroys any items and removes any liquids.
+block.extra-sand-redux-material-source-void.details = U N L I M I T E D E R  P O W E R
+
+## Effect
+block.extra-sand-redux-infini-mender.name = Configurable Mender
+block.extra-sand-redux-infini-mender.description = Periodically repairs blocks in its vicinity.\nRepair time and range can be configured.\nSandbox only.
+block.extra-sand-redux-infini-overdrive.name = Configurable Overdriver
+block.extra-sand-redux-infini-overdrive.description = Increases the speed of nearby buildings.\nSpeed boost and range can be configured.\nSandbox only.
+
 # Units
 
+unit.extra-sand-redux-god.name = Flarogus
+unit.extra-sand-redux-god.description = Every other unit's weapons and abilities has been slapped onto this unit. Doom approaches.\nSandbox only.
+unit.extra-sand-redux-god.details = sus
 unit.extra-sand-redux-dummy.name = Buster
 unit.extra-sand-redux-dummy.description = A target dummy made to be beaten up.\nSandbox only.
 unit.extra-sand-redux-dummy.details = [darkgray]Definitely does not house a conscience and is planning to kill you for everything you do to it.
 
-# Block Configs
+# Configs and Displays
+
+## Everything turret/unit
+exs-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
+
+## Sandbox Wall
+exs-sandbox-wall.mode-lightning = Lightning
+exs-sandbox-wall.lightning.chance = Chance
+exs-sandbox-wall.lightning.damage = Damage
+exs-sandbox-wall.lightning.length = Length
+exs-sandbox-wall.mode-deflection = Deflection
+exs-sandbox-wall.deflection.chance = Base Chance
+exs-sandbox-wall.mode-insulation = Insulation
+exs-sandbox-wall.mode-dpstesting = DPS Testing
 
 ## Target Dummy
 exs-target-dummy.enemy = Enemy Team
 
 # Stats
+exs-infinity = Infinity
+exs-infinite-damage = Infinite damage
+exs-everything = Everything
 
 # Settings
+setting.exs-sandbox-health.name = Buff sandbox block health
+setting.exs-sandbox-health.description = Restart required to apply changes.
+setting.exs-sandbox-everything.name = Enable the turret "Chaos" and the unit "Death"
+setting.exs-sandbox-everything.description = These can take a fair amount of data, especially with many mods enabled.\nRestart required to apply changes.
