Copy over settings
I'll make a unique icon for it later

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -94,6 +94,9 @@ exs-infinite-damage = Infinite damage
 exs-everything = Everything
 
 # Settings
+setting.exs-title = Extra Sand Redux Settings
+setting.exs-strobespeed.name = Sandbox Block Strobe Speed
+setting.exs-strobespeed.description = D o   y o u   f e e l   t h e   p o w e r ?
 setting.exs-sandbox-health.name = Buff sandbox block health
 setting.exs-sandbox-health.description = Restart required to apply changes.
 setting.exs-sandbox-everything.name = Enable the turret "Chaos" and the unit "Death"
