--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -73,31 +73,31 @@ unit.extra-sand-redux-dummy.details = [darkgray]Definitely does not house a cons
 # Configs and Displays
 
 ## Everything turret/unit
-exs-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
+esr-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
 
 ## Sandbox Wall
-exs-sandbox-wall.mode-lightning = Lightning
-exs-sandbox-wall.lightning.chance = Chance
-exs-sandbox-wall.lightning.damage = Damage
-exs-sandbox-wall.lightning.length = Length
-exs-sandbox-wall.mode-deflection = Deflection
-exs-sandbox-wall.deflection.chance = Base Chance
-exs-sandbox-wall.mode-insulation = Insulation
-exs-sandbox-wall.mode-dpstesting = DPS Testing
+esr-sandbox-wall.mode-lightning = Lightning
+esr-sandbox-wall.lightning.chance = Chance
+esr-sandbox-wall.lightning.damage = Damage
+esr-sandbox-wall.lightning.length = Length
+esr-sandbox-wall.mode-deflection = Deflection
+esr-sandbox-wall.deflection.chance = Base Chance
+esr-sandbox-wall.mode-insulation = Insulation
+esr-sandbox-wall.mode-dpstesting = DPS Testing
 
 ## Target Dummy
-exs-target-dummy.enemy = Enemy Team
+esr-target-dummy.enemy = Enemy Team
 
 # Stats
-exs-infinity = Infinity
-exs-infinite-damage = Infinite damage
-exs-everything = Everything
+esr-infinity = Infinity
+esr-infinite-damage = Infinite damage
+esr-everything = Everything
 
 # Settings
-setting.exs-title = Extra Sand Redux Settings
-setting.exs-strobespeed.name = Sandbox Block Strobe Speed
-setting.exs-strobespeed.description = D o   y o u   f e e l   t h e   p o w e r ?
-setting.exs-sandbox-health.name = Buff sandbox block health
-setting.exs-sandbox-health.description = Restart required to apply changes.
-setting.exs-sandbox-everything.name = Enable the turret "Chaos" and the unit "Death"
-setting.exs-sandbox-everything.description = These can take a fair amount of data, especially with many mods enabled.\nRestart required to apply changes.
+setting.esr-title = Extra Sand Redux Settings
+setting.esr-strobespeed.name = Sandbox Block Strobe Speed
+setting.esr-strobespeed.description = D o   y o u   f e e l   t h e   p o w e r ?
+setting.esr-sandbox-health.name = Buff sandbox block health
+setting.esr-sandbox-health.description = Restart required to apply changes.
+setting.esr-sandbox-everything.name = Enable the turret "Chaos" and the unit "Death"
+setting.esr-sandbox-everything.description = These can take a fair amount of data, especially with many mods enabled.\nRestart required to apply changes.
