Copy over unit cap increaser, configurable heat source, and evisceration

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -72,6 +72,9 @@ unit.extra-sand-redux-dummy.details = [darkgray]Definitely does not house a cons
 
 # Configs and Displays
 
+## Evisceration
+bar.esr-reload = Reload: {0}%
+
 ## Everything turret/unit
 esr-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
 
