Mod icon and settings icon

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -97,7 +97,7 @@ esr-infinite-damage = Infinite damage
 esr-everything = Everything
 
 # Settings
-setting.esr-title = Extra Sand Redux Settings
+setting.esr-title = Extra Sand Redux
 setting.esr-strobespeed.name = Sandbox Block Strobe Speed
 setting.esr-strobespeed.description = D o   y o u   f e e l   t h e   p o w e r ?
 setting.esr-sandbox-health.name = Buff sandbox block health
