--- a/build.gradle
+++ b/build.gradle
@@ -100,13 +100,16 @@ task deploy(type: Jar){
 }
 
 task move doLast{
-    if(System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")) {
-        println "Yeeting the mod jar to the shadow realm..."
+    println "Yeeting the mod jar to the shadow realm..."
+
+    String os = System.getProperty("os.name").toLowerCase(Locale.ROOT)
+    if(os.contains("windows")) {
         ant.move file: "${buildDir}\\libs\\${project.archivesBaseName}Desktop.jar",
                 todir: "${System.env.USERPROFILE}\\AppData\\Roaming\\Mindustry\\mods"
+    }else if(os.contains("linux")) { //from Router
+        ant.move file: "${buildDir}/libs/${project.archivesBaseName}Desktop.jar",
+                todir: "${System.env.USERPROFILE}/.local/share/Mindustry/mods"
     }else{
-        println "uhhh how do i do this for not windows"
+        println "Yeah I don't know how to do this on a Mac can someone tell me?"
     }
 }
-
-task jarMove dependsOn "jar", "move"
