Configurable power source/void and smart power source
I'll make the configurable battery later, that'll require a custom consume.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -17,12 +17,14 @@ block.extra-sand-redux-everything-liquid-source.name = Omega Liquid Source
 block.extra-sand-redux-everything-liquid-source.description = Infinitely outputs all liquids at once. Sandbox only.
 
 ## Power
-block.extra-sand-redux-rainbow-power-node.name = Rainbow Power Node
-block.extra-sand-redux-rainbow-power-node.description = Better than the average power node. Also is rainbowy.\nSandbox only.
-block.extra-sand-redux-rainbow-power-source.name = Rainbow Power Source
-block.extra-sand-redux-rainbow-power-source.description = Better than the average power source. Also is rainbowy.\nSandbox only.
-block.extra-sand-redux-rainbow-power-boost.name = Rainbow Power Boost Source
-block.extra-sand-redux-rainbow-power-boost.description = Like the rainbow power source, but everything in its power system gets boosted.\nSandbox only.
+block.extra-sand-redux-configurable-power-source.name = Configurable Power Source
+block.extra-sand-redux-configurable-power-source.description = Infinitely outputs a configurable amount of power. Sandbox only.
+block.extra-sand-redux-configurable-power-void.name = Configurable Power Void
+block.extra-sand-redux-configurable-power-void.description = Constantly consumes a configurable amount of power. Sandbox only.
+block.extra-sand-redux-configurable-battery.name = Configurable Battery
+block.extra-sand-redux-configurable-battery.description = Stores a configurable amount of power in times of surplus energy. Outputs power in times of deficit. Sandbox only.
+block.extra-sand-redux-smart-power-source.name = Smart Power Source
+block.extra-sand-redux-smart-power-source.description = Infinitely outputs power. Always outputs more power than its grid requires. Sandbox only.
 
 ## Defence
 block.extra-sand-redux-sandbox-wall.name = Sandbox Wall
