Everything Turret and Everything Unit

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,7 +4,7 @@
 block.extra-sand-redux-harbinger.name = [#F3E979]Evisceration
 block.extra-sand-redux-harbinger.description = I CAST FRICK EVERYTHING IN THAT GENERAL DIRECTION.\nSandbox only.\n[red]Big lag warning.
 block.extra-sand-redux-harbinger.details = Go to r/Mindustry and search for "The true power of the Duo."
-block.extra-sand-redux-everything-gun.name = Chaos
+block.extra-sand-redux-everything-gun.name = Ultimate Turret
 block.extra-sand-redux-everything-gun.description = Fires [red]ALL[] bullets in the game (vanilla or modded) at random - fires more powerful bullets over time.\nSandbox only.\n[darkgray]Hippity hoppity your ears are my property.\n(May or may not get quite laggy from all the chaos.)\n[red]May crash the game due to incompatibility with scripted bullets from other mods.
 block.extra-sand-redux-everything-gun.details = Ilya helped me with the increase damage over time code.
 
@@ -39,9 +39,9 @@ block.extra-sand-redux-infini-heater.name = Configurable Heat Source
 block.extra-sand-redux-infini-heater.description = Infinitely produces heat.\nHeat output can be configured.\nSandbox only.
 
 ## Unit
-block.extra-sand-redux-god-factory.name = Ultimate Unit Factory
-block.extra-sand-redux-god-factory.description = Spawns a unit with every other units weapons and abilities attached to it.\nSandbox only.
-block.extra-sand-redux-god-factory.details = godhood.exe
+block.extra-sand-redux-boxed-flarogus.name = Ultimate Unit in a Box
+block.extra-sand-redux-boxed-flarogus.description = A unit with every other unit's weapons and abilities slapped onto it. Click/tap or control to [red]release[].\nSandbox only.
+block.extra-sand-redux-boxed-flarogus.details = oh god oh god oh god
 block.extra-sand-redux-cap-block.name = Unit Cap Increaser
 block.extra-sand-redux-cap-block.description = Increases unit cap.\nSandbox only.
 
@@ -65,7 +65,7 @@ block.extra-sand-redux-infini-overdrive.description = Increases the speed of nea
 
 # Units
 
-unit.extra-sand-redux-god.name = Flarogus
+unit.extra-sand-redux-god.name = Ultimate Unit
 unit.extra-sand-redux-god.description = Every other unit's weapons and abilities has been slapped onto this unit. Doom approaches.\nSandbox only.
 unit.extra-sand-redux-god.details = sus
 unit.extra-sand-redux-dummy.name = Buster
@@ -78,7 +78,8 @@ unit.extra-sand-redux-dummy.details = [darkgray]Definitely does not house a cons
 bar.esr-reload = Reload: {0}%
 
 ## Everything turret/unit
-esr-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
+bar.esr-everything-strength = Strength: {0}%
+esr-sandbox-disabled = This is disabled to save RAM and decrease startup loading time.\nEnable it in Extra Sand Redux settings.
 
 ## Sandbox Wall
 esr-sandbox-wall.mode-lightning = Lightning
@@ -104,5 +105,5 @@ setting.esr-strobespeed.name = Sandbox Block Strobe Speed
 setting.esr-strobespeed.description = D o   y o u   f e e l   t h e   p o w e r ?
 setting.esr-sandbox-health.name = Buff sandbox block health
 setting.esr-sandbox-health.description = Restart required to apply changes.
-setting.esr-sandbox-everything.name = Enable the turret "Chaos" and the unit "Death"
-setting.esr-sandbox-everything.description = These can take a fair amount of data, especially with many mods enabled.\nRestart required to apply changes.
+setting.esr-sandbox-everything.name = Enable Ultimate Turret and Ultimate Unit
+setting.esr-sandbox-everything.description = These can take a fair amount of data and impact startup time, especially with many mods enabled.\nRestart required to apply changes.
