Configurable container + sprites

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -54,8 +54,12 @@ block.extra-sand-redux-multi-source-void.name = Dual Souoid
 block.extra-sand-redux-multi-source-void.description = Infinitely outputs items and liquids [red]and[] destroys any items and removes any liquids.\nSandbox only.
 block.extra-sand-redux-multi-source-void.details = U N L I M I T E D   P O W E R
 block.extra-sand-redux-material-source-void.name = Omega Souoid
-block.extra-sand-redux-material-source-void.description = Infinitely outputs all items and liquids at once [red]and[] destroys any items and removes any liquids.
+block.extra-sand-redux-material-source-void.description = Infinitely outputs all items and liquids at once [red]and[] destroys any items and removes any liquids.\nSandbox only.
 block.extra-sand-redux-material-source-void.details = U N L I M I T E D E R  P O W E R
+
+## Storage
+block.extra-sand-redux-configurable-container.name = Configurable Container
+block.extra-sand-redux-configurable-container.description = Stores a configurable amount of items of each type. Contents can be retrieved with an unloader.\nSandbox only.
 
 ## Effect
 block.extra-sand-redux-infini-mender.name = Configurable Mender
@@ -90,6 +94,9 @@ esr-sandbox-wall.mode-deflection = Deflection
 esr-sandbox-wall.deflection.chance = Base Chance
 esr-sandbox-wall.mode-insulation = Insulation
 esr-sandbox-wall.mode-dpstesting = DPS Testing
+
+## Configurable Container
+esr-container.incinerate-overflow = Incinerate Overflow
 
 ## Target Dummy
 esr-target-dummy.enemy = Enemy Team
