Button to empty config container and config battery

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -58,7 +58,7 @@ block.extra-sand-redux-material-source-void.description = Infinitely outputs all
 block.extra-sand-redux-material-source-void.details = U N L I M I T E D E R  P O W E R
 
 ## Storage
-block.extra-sand-redux-configurable-container.name = Configurable Container
+block.extra-sand-redux-configurable-container.name = Configurable Item Vault
 block.extra-sand-redux-configurable-container.description = Stores a configurable amount of items of each type. Contents can be retrieved with an unloader.\nSandbox only.
 
 ## Effect
@@ -95,8 +95,9 @@ esr-sandbox-wall.deflection.chance = Base Chance
 esr-sandbox-wall.mode-insulation = Insulation
 esr-sandbox-wall.mode-dpstesting = DPS Testing
 
-## Configurable Container
-esr-container.incinerate-overflow = Incinerate Overflow
+## Configurable Storage
+esr-storage.delete-contents = Delete Contents
+esr-storage.incinerate-overflow = Incinerate Overflow
 
 ## Target Dummy
 esr-target-dummy.enemy = Enemy Team
