--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -45,6 +45,10 @@ block.extra-sand-redux-boxed-flarogus.details = oh god oh god oh god
 block.extra-sand-redux-cap-block.name = Unit Cap Increaser
 block.extra-sand-redux-cap-block.description = Increases unit cap.\nSandbox only.
 
+## Payload
+block.extra-sand-redux-capacity-configurer.name = Configurable Capacity Configurer
+block.extra-sand-redux-capacity-configurer.description = Configures the capacity of configurable item vaults and configurable batteries that pass through this.\nSandbox Only.
+
 ## Other sources/voids
 block.extra-sand-redux-multi-source.name = Dual Source
 block.extra-sand-redux-multi-source.description = Infinitely outputs items and liquids.\nSandbox only.
