"Item Vault" or "Container" aaaaa

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -47,7 +47,7 @@ block.extra-sand-redux-cap-block.description = Increases unit cap.\nSandbox only
 
 ## Payload
 block.extra-sand-redux-capacity-configurer.name = Configurable Capacity Configurer
-block.extra-sand-redux-capacity-configurer.description = Configures the capacity of configurable item vaults and configurable batteries that pass through this.\nSandbox Only.
+block.extra-sand-redux-capacity-configurer.description = Configures the capacity of configurable containers and configurable batteries that pass through this.\nSandbox Only.
 
 ## Other sources/voids
 block.extra-sand-redux-multi-source.name = Dual Source
@@ -62,7 +62,7 @@ block.extra-sand-redux-material-source-void.description = Infinitely outputs all
 block.extra-sand-redux-material-source-void.details = U N L I M I T E D E R  P O W E R
 
 ## Storage
-block.extra-sand-redux-configurable-container.name = Configurable Item Vault
+block.extra-sand-redux-configurable-container.name = Configurable Container
 block.extra-sand-redux-configurable-container.description = Stores a configurable amount of items of each type. Contents can be retrieved with an unloader.\nSandbox only.
 
 ## Effect
