WIP Input Reader

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -103,6 +103,12 @@ esr-sandbox-wall.mode-dpstesting = DPS Testing
 esr-storage.delete-contents = Delete Contents
 esr-storage.incinerate-overflow = Incinerate Overflow
 
+## Flowrate Reader
+esr-flowrate-reader.add-time = Add Time:
+esr-flowrate-reader.reset = Reset
+esr-flowrate-reader.no-time = <Add time to collect data>
+unit.payloadssecond = payloads/second
+
 ## Target Dummy
 esr-target-dummy.enemy = Enemy Team
 
