Convert to Glenn's template

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -123,5 +123,5 @@ setting.esr-strobespeed.name = Sandbox Block Strobe Speed
 setting.esr-strobespeed.description = D o   y o u   f e e l   t h e   p o w e r ?
 setting.esr-sandbox-health.name = Buff sandbox block health
 setting.esr-sandbox-health.description = Restart required to apply changes.
-setting.esr-sandbox-everything.name = Enable Ultimate Turret and Ultimate Unit
-setting.esr-sandbox-everything.description = These can take a fair amount of data and impact startup time, especially with many mods enabled.\nRestart required to apply changes.
+setting.esr-sandbox-everything.name = Enable Everything Turret and Everything Unit
+setting.esr-sandbox-everything.description = These can take a fair amount of data and impact startup time,\nespecially with many mods enabled.\nRestart required to apply changes.
