--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,12 @@
 pluginManagement{
     repositories{
         gradlePluginPortal()
-        maven{url 'https://www.jitpack.io'}
+        maven{url 'https://jitpack.io'}
     }
 }
 
 if(JavaVersion.current().ordinal() < JavaVersion.VERSION_17.ordinal()){
     throw new GradleException("JDK 17 is a required minimum version. Yours: ${System.getProperty('java.version')}")
 }
+
+rootProject.name = modName
