Flowrate Void details dialog

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -60,6 +60,8 @@ block.extra-sand-redux-multi-source-void.details = U N L I M I T E D   P O W E R
 block.extra-sand-redux-material-source-void.name = Omega Souoid
 block.extra-sand-redux-material-source-void.description = Infinitely outputs all items and liquids at once [red]and[] destroys any items and removes any liquids.\nSandbox only.
 block.extra-sand-redux-material-source-void.details = U N L I M I T E D E R  P O W E R
+block.extra-sand-redux-input-reader.name = Flowrate Void
+block.extra-sand-redux-input-reader.description = Destroys all items, liquids, and payloads. Select to add time to the recording duration or view details on flowrates.\nSandbox only.
 
 ## Storage
 block.extra-sand-redux-configurable-container.name = Configurable Container
@@ -107,7 +109,16 @@ esr-storage.incinerate-overflow = Incinerate Overflow
 esr-flowrate-reader.add-time = Add Time:
 esr-flowrate-reader.reset = Reset
 esr-flowrate-reader.no-time = <Add time to collect data>
+unit.powersecondprod = power/sec produced
+unit.powersecondcons = power/sec consumed
 unit.payloadssecond = payloads/second
+
+esr-flowrate-reader.title = Flowrate Details
+esr-flowrate-reader.total = [lightgray]Total: {0}
+esr-flowrate-reader.powerproduced = [lightgray]Power Produced: {0}
+esr-flowrate-reader.powerconsumed = [lightgray]Power Consumed: {0}
+esr-flowrate-reader.powertransferred = [lightgray]Power Transferred: {0}
+esr-flowrate-reader.payloads = Payloads
 
 ## Target Dummy
 esr-target-dummy.enemy = Enemy Team
