Better total rate display

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -108,10 +108,7 @@ esr-storage.incinerate-overflow = Incinerate Overflow
 ## Flowrate Reader
 esr-flowrate-reader.add-time = Add Time:
 esr-flowrate-reader.reset = Reset
-esr-flowrate-reader.no-time = <Add time to collect data>
-unit.powersecondprod = power/sec produced
-unit.powersecondcons = power/sec consumed
-unit.payloadssecond = payloads/second
+esr-flowrate-reader.no-time = <No Data>
 
 esr-flowrate-reader.title = Flowrate Details
 esr-flowrate-reader.total = [lightgray]Total: {0}
