--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -133,3 +133,7 @@ setting.esr-sandbox-health.name = Buff sandbox block health
 setting.esr-sandbox-health.description = Restart required to apply changes.
 setting.esr-sandbox-everything.name = Enable Everything Turret and Everything Unit
 setting.esr-sandbox-everything.description = These can take a fair amount of data and impact startup time,\nespecially with many mods enabled.\nRestart required to apply changes.
+
+# Mod
+mod.extra-sand-redux.description = A plethora of sandbox-only blocks dedicated for both fun and testing purposes.\n\n[red]REQUIRES `MEEPofFaith/black-hole-renderer` TO RUN.
+mod.extra-sand-redux.subtitle = It [red]returns[].
