--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Upload built mod artifact
         uses: actions/upload-artifact@v3
         with:
-          name: MeepscCont (zipped)
+          name: ESR (zipped)
           path: build/libs/ESR.jar
