--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,7 +4,7 @@
 block.extra-sand-redux-harbinger.name = [#F3E979]Evisceration
 block.extra-sand-redux-harbinger.description = I CAST FRICK EVERYTHING IN THAT GENERAL DIRECTION.\nSandbox only.\n[red]Big lag warning.
 block.extra-sand-redux-harbinger.details = Go to r/Mindustry and search for "The true power of the Duo."
-block.extra-sand-redux-everything-gun.name = Ultimate Turret
+block.extra-sand-redux-everything-gun.name = Fantastic Turret
 block.extra-sand-redux-everything-gun.description = Fires [red]ALL[] bullets in the game (vanilla or modded) at random - fires more powerful bullets over time.\nSandbox only.\n[darkgray]Hippity hoppity your ears are my property.\n(May or may not get quite laggy from all the chaos.)\n[red]May crash the game due to incompatibility with scripted bullets from other mods.
 block.extra-sand-redux-everything-gun.details = Ilya helped me with the increase damage over time code.
 
@@ -75,7 +75,7 @@ block.extra-sand-redux-infini-overdrive.description = Increases the speed of nea
 
 # Units
 
-unit.extra-sand-redux-god.name = Ultimate Unit
+unit.extra-sand-redux-god.name = Fantastic Unit
 unit.extra-sand-redux-god.description = Every other unit's weapons and abilities has been slapped onto this unit. Doom approaches.\nSandbox only.
 unit.extra-sand-redux-god.details = sus
 unit.extra-sand-redux-dummy.name = Buster
