Add net power to flowrate dialog

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -114,7 +114,8 @@ esr-flowrate-reader.title = Flowrate Details
 esr-flowrate-reader.total = [lightgray]Total: {0}
 esr-flowrate-reader.powerproduced = [lightgray]Power Produced: {0}
 esr-flowrate-reader.powerconsumed = [lightgray]Power Consumed: {0}
-esr-flowrate-reader.powertransferred = [lightgray]Power Transferred: {0}
+esr-flowrate-reader.powernet = [lightgray]Net Power: {0}
+esr-flowrate-reader.powertransported = [lightgray]Power Transported: {0}
 esr-flowrate-reader.payloads = Payloads
 
 ## Target Dummy
