--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -132,7 +132,7 @@ setting.esr-strobespeed.name = Sandbox Block Strobe Speed
 setting.esr-strobespeed.description = D o   y o u   f e e l   t h e   p o w e r ?
 setting.esr-sandbox-health.name = Buff sandbox block health
 setting.esr-sandbox-health.description = Restart required to apply changes.
-setting.esr-sandbox-everything.name = Enable Everything Turret and Everything Unit
+setting.esr-sandbox-everything.name = Enable Fantastic Turret and Fantastic Unit
 setting.esr-sandbox-everything.description = These can take a fair amount of data and impact startup time,\nespecially with many mods enabled.\nRestart required to apply changes.
 
 # Mod
