Turret Controller Bundle

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -73,6 +73,10 @@ block.extra-sand-redux-infini-mender.description = Periodically repairs blocks i
 block.extra-sand-redux-infini-overdrive.name = Configurable Overdriver
 block.extra-sand-redux-infini-overdrive.description = Increases the speed of nearby buildings.\nSpeed boost and range can be configured.\nSandbox only.
 
+## Logic
+block.extra-sand-redux-turret-controller.name = Turret Controller
+block.extra-sand-redux-turret-controller.description = Controls the turret placed in front.\nClick to configure.\nSandbox only.
+
 # Units
 
 unit.extra-sand-redux-god.name = Fantastic Unit
