Placeable Core bundles

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -66,6 +66,8 @@ block.extra-sand-redux-input-reader.description = Destroys all items, liquids, a
 ## Storage
 block.extra-sand-redux-configurable-container.name = Configurable Container
 block.extra-sand-redux-configurable-container.description = Stores a configurable amount of items of each type. Contents can be retrieved with an unloader.\nSandbox only.
+block.extra-sand-redux-placeable-core.name = Placeable Core
+block.extra-sand-redux-placeable-core.description = Can be placed anywhere on the map and acts as a core.\nSelect to transform into any other core.\nSandbox only.
 
 ## Effect
 block.extra-sand-redux-infini-mender.name = Configurable Mender
