--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -127,6 +127,16 @@ esr-flowrate-reader.payloads = Payloads
 ## Target Dummy
 esr-target-dummy.enemy = Enemy Team
 
+## Turret Controller
+esr-turret-controller-on = On
+esr-turret-controller-off = Off
+esr-turret-controller-disable = Disable
+esr-turret-controller-angle = Angle: 
+esr-turret-controller-distance = Distance: 
+
+## Placeable Core
+esr-placeable-core-place = Place
+
 # Stats
 esr-infinity = Infinity
 esr-infinite-damage = Infinite damage
