--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ mindustryBEVersion =
 # Arc version, should either follow `mindustryVersion` for release or whatever hash bleeding-edge Mindustry uses.
 arcVersion = v146
 # My black hole renderer. Just use the latest release.
-blackHoleRendererVersion = v15
+blackHoleRendererVersion = 16
 
 ##### Android SDK configuration for building Android artifacts.
 # Android platform SDK version.
