--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -71,7 +71,7 @@ block.extra-sand-redux-placeable-core.description = Can be placed anywhere on th
 
 ## Effect
 block.extra-sand-redux-inf-build-tower.name = Extreme Range Build Tower
-block.extra-sand-redux-inf-build-tower.description = Automatically rebuilds structures in range and assists other units in construction. Has comically long range.\nSandbox only.
+block.extra-sand-redux-inf-build-tower.description = Automatically rebuilds structures in range and assists other units in construction. Has comically long range and virtually no cooldown.\nSandbox only.
 block.extra-sand-redux-infini-mender.name = Configurable Mender
 block.extra-sand-redux-infini-mender.description = Periodically repairs blocks in its vicinity.\nRepair time and range can be configured.\nSandbox only.
 block.extra-sand-redux-infini-overdrive.name = Configurable Overdriver
