--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -154,5 +154,5 @@ setting.esr-sandbox-everything.name = Enable Fantastic Turret and Fantastic Unit
 setting.esr-sandbox-everything.description = These can take a fair amount of data and impact startup time,\nespecially with many mods enabled.\nRestart required to apply changes.
 
 # Mod
-mod.extra-sand-redux.description = A plethora of sandbox-only blocks dedicated for both fun and testing purposes.\n\n[red]REQUIRES `MEEPofFaith/black-hole-renderer` TO RUN. THE GAME WILL CRASH WITHOUT IT INSTALLED.[]
+mod.extra-sand-redux.description = A plethora of sandbox-only blocks dedicated for both fun and testing purposes.
 mod.extra-sand-redux.subtitle = It [red]returns[].
