--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -128,6 +128,7 @@ esr-flowrate-reader.payloads = Payloads
 
 ## Target Dummy
 esr-target-dummy.enemy = Enemy Team
+esr-target-dummy.reset = Reset Time:
 
 ## Turret Controller
 esr-turret-controller-on = On
