total damage and hit counter

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -129,6 +129,9 @@ esr-flowrate-reader.payloads = Payloads
 ## Target Dummy
 esr-target-dummy.enemy = Enemy Team
 esr-target-dummy.reset = Reset Time:
+esr-target-dummy.dps = {0} DPS
+esr-target-dummy.total = ({0} dmg/{1} sec)
+esr-target-dummy.hits = {0} hits
 
 ## Turret Controller
 esr-turret-controller-on = On
